AddressBook, second commit

--- a/templates/address/test.html
+++ b/templates/address/test.html
@@ -3,7 +3,7 @@
 <head>
 	<title>This is my first page </title>
 {% load staticfiles %}
-  <link href="{% static "styles.css" %}" rel="stylesheet" text="text/css" >
+  <link href="{% static "address/styles.css" %}" rel="stylesheet" text="text/css" >
   <link href="{% static "first_header.css" %}" rel="stylesheet" type="text/css">
 </head>
 <h1> hello world </h1>
