--- a/templates/newtest_app/test.html
+++ b/templates/newtest_app/test.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	{% load staticfiles %}
-	<link href="{% static "styles.css" %}" rel="stylesheet" type="text/css" >
+	<link href="{% static "newtest_app/styles.css" %}" rel="stylesheet" type="text/css" >
+	<link href="{% static "first_header.css" %}" rel="stylesheet" type="text/css">
 		
 </head>
 <h1> hello world </h1>
